# ez_restapi

./: .env  Cargo.toml  README.md  docker-compose.yaml
migrations/: 0001_reports_table.sql
src/: crud.rs  main.rs  models.rs
