[package]
name = "v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.0" , features = ["full"]}
sqlx = {version = "0.6.3", features = ["postgres","runtime-tokio-rustls","chrono"]}
dotenv = "0.15.0"
log = "0.4.21"
sqlx-cli = "0.7.4"
futures = "0.3.30"
futures-util = "0.3.30"
chrono = {version = "0.4.35", features = ["serde"]}
serde = {version = "1.0.197",features=["derive"]}
serde_json = {version = "1.0.114",features = ["raw_value"]}
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
